fix: fix card title overflow

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -19,10 +19,16 @@
     object-fit: cover;
 }
 
+#title {
+    color: red;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 #newsInfoContainer {
     height: 50%;
     width: 100%;
-
 }
 
 #text {
